LOGCXX-246: Config refresh hangs a client application that uses TelnetAppender